# lahella-cli

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  activity_diff.py  auth.toml.example  auth.yaml.example  auth_helper.py  course_config.toml  create_course.py  defaults.toml  download_activities.py  field_mapping.py  login.py  pyproject.toml  schema.json  sync_activities.py  taiji-lauttasaari.toml  test_activity_diff.py  test_api.py  test_field_mapping.py  test_template_matcher.py  test_update_payload.py  update_payload.py
.github/workflows/: publish.yml  test.yml
scripts/: bump-version.sh
src/lahella_cli/: __init__.py
tests/: test_activity_diff.py  test_api.py  test_field_mapping.py  test_template_matcher.py  test_update_payload.py
